fix: добавляет flex-wrap в местах возможного переполнения

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,6 +100,7 @@ body {
 .navigation__list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -645,6 +646,7 @@ body {
   list-style-type: none;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .pagination__item:not(:last-child) {
